--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "test": "node test/index.js",
     "bundle-zero": "browserify -s ZeroClientProvider -e zero.js > dist/ZeroClientProvider.js",
     "bundle-engine": "browserify -s ProviderEngine -e index.js > dist/ProviderEngine.js",
+    "bundle-hooked-provider": "browserify -s HookedWalletSubprovider -e subproviders/hooked-wallet.js > dist/HookedWalletSubprovider.js",
     "bundle": "mkdir -p ./dist && npm run bundle-engine && npm run bundle-zero"
   },
   "author": "",
