--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "bundle-zero": "browserify -s ZeroClientProvider -e zero.js > dist/ZeroClientProvider.js",
     "bundle-engine": "browserify -s ProviderEngine -e index.js > dist/ProviderEngine.js",
     "bundle-hooked-provider": "browserify -s HookedWalletSubprovider -e subproviders/hooked-wallet.js > dist/HookedWalletSubprovider.js",
+    "bundle-rpc-provider": "browserify -s RpcSubprovider -e subproviders/rpc.js > dist/RpcSubprovider.js",
     "bundle": "mkdir -p ./dist && npm run bundle-engine && npm run bundle-zero"
   },
   "author": "",
